[tool.poetry]
name = "programm for working with the derebit-com"
version = "0.1.0"
description = "A program for working with the Deribit API to obtain prices for currencies and then work with them."
authors = ["Sladkiy-bubalex <shadow.ru_93@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "^0.128.0"
aiohttp = "^3.13.3"
celery = "^5.6.2"
pydantic-settings = "^2.12.0"
loguru = "^0.7.3"
dotenv = "^0.9.9"
asyncpg = "^0.31.0"
alembic = "^1.18.1"
sqlalchemy = "^2.0.45"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
